Version 1.14 - 2017-11-09
* OTH#0000 Move group-by method to report_engine
* FEA#6266 Add header field to the report template flux
* FEA#6266 Add header management into the Base Mass Flow Batch

Version 1.12 - 2017-04-28
* FEA#0000 Use safe open to support concurrent file writing
* FEA#0000 Add filename and export directory on flow report template

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Module creation